update docker front end

--- a/frontend/chamado-frontend/tsconfig.app.json
+++ b/frontend/chamado-frontend/tsconfig.app.json
@@ -24,4 +24,19 @@
     "noUncheckedSideEffectImports": true
   },
   "include": ["src"]
+
+  {
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "jsx": "react-jsx",
+    "moduleResolution": "bundler",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true
+  }
+}
+
 }
