--- a/backend/chamadoapp/src/main/resources/application.properties
+++ b/backend/chamadoapp/src/main/resources/application.properties
@@ -1,12 +1,9 @@
-# Conexão com PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/chamadosdb
+spring.datasource.url=jdbc:postgresql://db:5432/chamadosdb
 spring.datasource.username=postgres
 spring.datasource.password=Gt@19a01
 
-# JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Driver PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
