--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - "8080:8080"
     networks:
       - chamado-net
+    depends_on:
+      - db
 
   frontend:
     build:
@@ -18,6 +20,18 @@ services:
       - "3000:80"
     depends_on:
       - backend
+    networks:
+      - chamado-net
+
+  db:
+    image: postgres:15
+    container_name: postgres-db
+    environment:
+      POSTGRES_DB: chamadosdb
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: Gt@19a01
+    ports:
+      - "5432:5432"
     networks:
       - chamado-net
 
