--- a/backend/chamadoapp/src/main/resources/application.properties
+++ b/backend/chamadoapp/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://db:5432/chamadosdb
+spring.datasource.url=jdbc:postgresql://postgres-db:5432/chamadosdb
 spring.datasource.username=postgres
 spring.datasource.password=Gt@19a01
 
@@ -7,3 +7,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+
+
