--- a/frontend/chamado-frontend/Dockerfile
+++ b/frontend/chamado-frontend/Dockerfile
@@ -1,8 +1,7 @@
-
 FROM node:20 as build
 WORKDIR /app
 COPY . .
-RUN npm install && npm run build
+RUN npm install && npm run build && ls -R /app
 
 FROM nginx:alpine
 COPY --from=build /app/dist /usr/share/nginx/html
