--- a/frontend/chamado-frontend/nginx.conf
+++ b/frontend/chamado-frontend/nginx.conf
@@ -4,12 +4,11 @@ server {
 
     location / {
         root /usr/share/nginx/html;
-        index index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
 
     location /api/ {
-        proxy_pass http://chamado-backend:8080/api/chamados;
+        proxy_pass http://chamado-backend:8080/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
